Implemant Pagination for All Authors (#48)
* Minor quality Fixes

* More test for Service Impl

* Pagination Tests

* Fix Style Check

* More Pagination Tests

* Update Documentation

* Update Vulnerable Dependencies